@@ -8,6 +8,9 @@ mlUnit 1.9.3 (in development)
   - Support UNIX/Linux execution of build.xml Ant scripts.
   - Fix: Tests skipped during set_up don't tell the call stack any more.
   - Fix: Proper encoding in jUnit reports. Always UTF-8.
+  - Fix: When adding a directory to the MATLAB serach path, that is
+    a descendant of a mlunit_tempdir controlled directory, mlUnit does
+    not trigger a MATLAB warning anymore.
 
 
 mlUnit 1.9.2 (2020-08-18)
